<resources>
    <string name="municipality">Chiantla</string>
    <string name="app_name">Somos Chiantla</string>
    <string name="my_muni">Mi Chiantla</string>
    <string name="discussion">Noticias y Discusión</string>
    <string name="notification">Reportar a la Muni</string>
    <string name="explore_muni">Conoce tu municipio</string>
    <string name="development_plan">Plan de Desarrollo</string>
    <string name="contacts">Contactos</string>
    <string name="health_centers">Centros Asistenciales de Salud</string>
    <string name="laws">Ley de Acceso a la Información Pública</string>
    <string name="general_source">&#060;b&#062;Datos del Municipio de Chiantla.&#060;&#047;b&#062; Guatemala: USAID\nexos
        Locales, 2016.</string>
    <string name="population_source">&#060;b&#062;Plan de Desarrollo Municipal PDM del Municipio de Chiantla.
    &#060;&#047;b&#062; Guatemala: SEGEPLAN/DPT, 2010. </string>
    <string name="total_pop">Población total</string>
    <string name="women">Mujeres</string>
    <string name="men">Hombres</string>
    <string name="younger_than_29">Menores de\n29 años</string>
    <string name="older_than_29">Mayores de\n29 años</string>
    <string name="malnutrition">Desnutrición\n crónica</string>
    <string name="poberty">Pobreza</string>
    <string name="extreme_poberty">Extrema\n Pobreza</string>
    <string name="literacy">Alfabetismo</string>
    <string name="kiche">Kiché</string>
    <string name="spanish">Español</string>
    <string name="mam">Mam</string>
    <string name="category">Categoría</string>
    <string name="number">Número</string>
    <string name="villas">Villas</string>
    <string name="zones">Zonas</string>
    <string name="cantons">Cantones</string>
    <string name="colonies">Colonias</string>
    <string name="farmhouses">Caseríos</string>
    <string name="villages">Aldeas</string>
    <string name="places">Parajes</string>
    <string name="fams">Fincas</string>
    <string name="total">Total</string>
    <string name="farming">Agricultura</string>
    <string name="services">Servicios</string>
    <string name="mission">Misión de la Municipalidad</string>
    <string name="vision">Visión de la Municipalidad</string>
    <string name="return_to_muni">Regresar a Mi Chiantla</string>
    <string name="executed">Ejecutado</string>
    <string name="axes">Ejes de desarrollo</string>
    <string name="objectives">Objetivos</string>
    <string name="projects">Proyectos</string>
    <string name="full_plan">Descubre el plan completo</string>
    <string name="next">Continuar</string>
    <string name="law_title">LAIP</string>
    <string name="done">Finalizado</string>
    <string name="not_done">No Iniciado</string>
    <string name="doing">En Proceso</string>
    <string name="main">Principal</string>
    <string name="address">Dirección:</string>
    <string name="schedule">Horario:</string>
    <string name="mail">Correo Electrónico:</string>
    <string name="phone">Teléfono:</string>
    <string name="facebook">Facebook:</string>
    <string name="twitter">Twitter:</string>
    <string name="instagram">Instagram:</string>
    <string name="youtube">Youtube:</string>
    <string name="website">Sitio web:</string>
    <string name="offices">Dependencias Municipales</string>
    <string name="email_subject">Contacto desde app</string>
    <string name="select_action">Selecciona una Acción</string>
    <string name="send_email">Enviar Correo</string>
    <string name="call">Llamar</string>
    <string name="add_contact">Agregar Contacto</string>
    <string name="health_centers_header">Centros - Salud</string>
    <string name="health_center">Centro de Salud Chiantla</string>
    <string name="health_posts">Puestos de Salud</string>
    <string name="director">Director</string>
    <string name="municipal_heath_centers">Centros de Convergencia</string>
    <string name="malformed_url">Ha ocurrido un error: URL Malformada, cierra la aplicación y vuelve a intentarlo</string>
    <string name="connection_error">No se ha podido conectar con el servidor, por favor espera unos minutos y vuelve a intentarlo</string>
    <string name="budget">Presupuesto</string>
    <string name="budget_intro">Aquí puedes explorar el presupuesto municipal del año en curso hasta la fecha de hoy.</string>
    <string name="see_budget">Ver Presupuesto</string>
    <string name="updated_info">Información actualizada:</string>
    <string name="income">Ingresos</string>
    <string name="added">Ingresado</string>
    <string name="expenses">Gastos</string>
    <string name="budgeted">Presupuestado</string>
    <string name="programs">Programas</string>
    <string name="project">Proyecto</string>
    <string name="activities">Actividades</string>
    <string name="activity">Actividad</string>
    <string name="own_income">Ingresos Propios</string>
    <string name="other_income">Transferencias del Gobierno Central</string>
    <string name="income_class">Clase</string>
    <string name="section">Sección</string>
    <string name="auxiliary">Recurso Auxiliar</string>
    <string name="auxiliary_min">Rec. Aux</string>
    <string name="expenses_projects">Proyectos e Infraestructura</string>
    <string name="not_projects">Gastos Administrativos y Servicios Públicos</string>
    <string name="sent_notifications">Reportes enviados</string>
    <string name="sent">Enviado</string>
    <string name="saved">No Enviado</string>
    <string name="new_notification">Nuevo Reporte</string>
    <string name="problem_type">Tipo de problema...</string>
    <string-array name="problem_types">
        <item>Tipo de problema...</item>
        <item>Agua y Drenajes</item>
        <item>Iluminación</item>
        <item>Estado de Calles, Carreteras, Caminos o Banquetas</item>
        <item>Problemas de Tránsito</item>
        <item>Servicios Publicos (Mercado, Cementerio, Instalaciones Deportivas, etc.)</item>
        <item>Corrupción y Denuncia Municipal</item>
        <item>Seguridad Ciudadana</item>
        <item>Medio Ambiente, Áreas Verdes</item>
        <item>Solicitar Información</item>
        <item>Problemas de esta aplicación</item>
        <item>Otros</item>
    </string-array>
    <string name="selected_image">1 imagen seleccionada</string>
    <string name="error">Error</string>
    <string name="fill_fields">Debes llenar todos los campos que tienen un asterisco (*).</string>
    <string name="accept">Aceptar</string>
    <string name="sent_success">¡Tu reporte ha sido enviado existosamente!</string>
    <string name="sent_emergencies">Recuerda que esta app no es para reportar emergencias.</string>
    <string name="sent_call">En caso de emergencia, llamar directamente al número siguiente:</string>
    <string name="sent_phone">+502 4938 5722</string>
    <string name="sent_notification_return">Volver a Menú Inicial</string>
    <string name="sent_notification">Reporte Enviado</string>
    <string name="info_continue">Continuar</string>
    <string name="about_info">Acerca de</string>
    <string name="development_info_title">Plan de Desarrollo</string>
    <string name="development_info_content">El Plan de Desarrollo Municipal es el plan de trabajo a largo
        plazo de la Municipalidad. Fue desarrollado en el año 2009 por la Municipalidad, SEGEPLAN,
        COCODES y organizaciones que trabajan a nivel local.\n\nEstá compuesto por proyectos
        agrupados en objetivos, que a su vez están agrupados en cuatro ejes de desarrollo
        principales. Para calcular los porcentajes de ejecución se divide la cantidad de proyectos
        completados y en curso entre la cantidad de proyectos del plan.\n\nActualmente la
        Municipalidad de Chiantla trabaja en implementar nuevos Planes de Desarrollo Comunitarios.
        Acércate a la Municipalidad o a tu COCODE para enterarte y participar.</string>
    <string name="budget_info_title">Presupuesto 2017</string>
    <string name="about_muni">Acerca de Somos Chiantla</string>
    <string name="last_update">Última actualicación </string>
    <string name="app_version">Versión de la Aplicación</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_text">Este es un proyecto Open Source con licencia MIT.</string>
    <string name="github_link">github.com/munis-transparencia-gobierno-abierto/municipalidad-de-chiantla</string>
    <string name="credits">Créditos</string>
    <string name="financing">Financiamiento</string>
    <string name="usaid">USAID Nexos Locales</string>
    <string name="usaid_link">www.facebook.com/USAID.NexosLocales</string>
    <string name="development">Desarrollo</string>
    <string name="ludiverse_explico">Ludiverse Inc. / Explico S.A.</string>
    <string name="development_link">www.ludiverse.net</string>
    <string name="design">Diseño</string>
    <string name="klap">Klap</string>
    <string name="klap_link">www.klap.com.gt</string>
    <string name="programming">Programación</string>
    <string name="innerlemonade">InnerLemonade</string>
    <string name="innerlemonade_link">www.innerlemonade.com</string>
    <string name="aboutChiantla">Acerca de ‘Somos Chiantla’</string>
    <string name="aboutChiantlaInfo">Esta aplicación de transparencia y participación ciudadana es un
        proyecto impulsado por el Alcalde Municipal, Carlos Armando Alvarado Figueroa. Su objetivo
        es dar a la ciudadanía una plataforma tecnológica de transparencia y rendición de cuentas que
        nos permita trabajar de la mano con los ciudadanos para cerrar paso a la posibilidad de
        corrupción en la gestión municipal. También busca reafirmar el compromiso del Gobierno
        Municipal 2016 - 2020 de actuar con transparencia y responsabilidad y de trabajar siempre
        por Chiantla y por su gente.\n\n** La información publicada en la aplicación no refleja la
        opinión de USAID o del gobierno de los Estados Unidos de América.</string>
</resources>