<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gt.muni.chiantla.AboutActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="33dp"
        android:text="@string/about_muni"
        android:textAlignment="center"
        android:textAppearance="@style/BudgetSubtitleText"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollableInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:clipToPadding="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_update"
                        android:textAppearance="@style/NormalBoldText" />

                    <TextView
                        android:id="@+id/lastUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textAppearance="@style/NormalText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/app_version"
                        android:textAllCaps="true"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/aboutHeaderColor" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/aboutHeaderColor" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/open_source"
                    android:textAppearance="@style/NormalBoldText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/open_source_text"
                    android:textAppearance="@style/NormalText" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:tint="@color/menuChiantla"
                    app:srcCompat="@drawable/git_hub" />

                <TextView
                    android:id="@+id/githubLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:onClick="goToGitHub"
                    android:text="@string/github_link"
                    android:textAppearance="@style/NormalText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/credits"
                    android:textAllCaps="true"
                    android:textAppearance="@style/NormalText"
                    android:textColor="@color/aboutHeaderColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToLink">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/financing"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/aboutHeaderColor" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView18"
                        android:layout_marginBottom="10dp"
                        android:text="@string/usaid"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/menuChiantla" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView34"
                        android:text="@string/usaid_link"
                        android:textAppearance="@style/AboutBlackLinkText" />

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/budget_button"
                        android:paddingLeft="13dp"
                        android:paddingRight="13dp"
                        app:srcCompat="@drawable/arrow_big_white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToLink">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/development"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/aboutHeaderColor" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView19"
                        android:layout_marginBottom="10dp"
                        android:text="@string/ludiverse_explico"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/menuChiantla" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView20"
                        android:text="@string/development_link"
                        android:textAppearance="@style/AboutBlackLinkText" />

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/budget_button"
                        android:paddingLeft="13dp"
                        android:paddingRight="13dp"
                        app:srcCompat="@drawable/arrow_big_white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToLink">

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/design"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/aboutHeaderColor" />

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView25"
                        android:layout_marginBottom="10dp"
                        android:text="@string/klap"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/menuChiantla" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView26"
                        android:text="@string/klap_link"
                        android:textAppearance="@style/AboutBlackLinkText" />

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/budget_button"
                        android:paddingLeft="13dp"
                        android:paddingRight="13dp"
                        app:srcCompat="@drawable/arrow_big_white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToLink">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/programming"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/aboutHeaderColor" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView22"
                        android:layout_marginBottom="10dp"
                        android:text="@string/innerlemonade"
                        android:textAppearance="@style/NormalText"
                        android:textColor="@color/menuChiantla" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView23"
                        android:text="@string/innerlemonade_link"
                        android:textAppearance="@style/AboutBlackLinkText" />

                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/budget_button"
                        android:paddingLeft="13dp"
                        android:paddingRight="13dp"
                        app:srcCompat="@drawable/arrow_big_white" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/aboutChiantla"
                    android:textAllCaps="true"
                    android:textAppearance="@style/NormalText"
                    android:textColor="@color/aboutHeaderColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/aboutChiantlaInfo"
                    android:textAppearance="@style/NormalText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/license"
                    android:textAllCaps="true"
                    android:textAppearance="@style/NormalText"
                    android:textColor="@color/aboutHeaderColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/full_license"
                    android:textAppearance="@style/NormalText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/privacy_policy"
                    android:textAllCaps="true"
                    android:textAppearance="@style/NormalText"
                    android:textColor="@color/aboutHeaderColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_privacy_policy_p1"
                    android:textAppearance="@style/NormalText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToGooglePlayServicesPrivacy"
                    android:text="@string/google_play_services"
                    android:textAppearance="@style/NormalText"
                    android:textColor="@color/aboutHeaderColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="goToFirebaseAnalyticsPrivacy"
                    android:text="@string/firebase_analytics"
                    android:textAppearance="@style/NormalText"
                    android:textColor="@color/aboutHeaderColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_privacy_policy_p2"
                    android:textAppearance="@style/NormalText" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>
