<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_budget_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:paddingTop="100dp"
    tools:context="gt.muni.chiantla.budget.BudgetInfoFragment">

    <gt.muni.chiantla.widget.CustomNestedScrollView
        android:id="@+id/scrollableInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="23dp"
                app:srcCompat="@mipmap/presupuesto_principal" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/budget_info_title"
                android:textAppearance="@style/BudgetIntroTitleText" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/budget_intro"
                android:textAppearance="@style/LongText" />

            <Button
                android:id="@+id/budgetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/colorBudgetsPrimary"
                android:onClick="goToNext"
                android:text="@string/see_budget"
                android:textAppearance="@style/ButtonText" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/updated_info"
                android:textAppearance="@style/LongTextMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/budgetInfoLineColor" />

            <TextView
                android:id="@+id/updateDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/UpdateTimeNumbersText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/budgetInfoLineColor" />

            <TextView
                android:id="@+id/updateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/UpdateTimeNumbersText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/budgetInfoLineColor" />
        </LinearLayout>
    </gt.muni.chiantla.widget.CustomNestedScrollView>

    <include layout="@layout/section_scroll_indicator" />

</RelativeLayout>
